[package]
name = "actix-pretreat"
version = "0.1.0"
edition = "2021"
authors = ["FrozenString<frozenstringstable@gmail.com>"]
description = "Request Pretreatment for Actix"
homepage = "https://github.com/Enraged-Dun-Cookie-Development-Team/req-pretreatment"
documentation = "https://docs.rs/resp-result"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
actix-web="4"
pin-project = "1"
futures = "0.3"
futures-util = "0.3"
serde="1"

[dependencies.resp-result]
version="0.1.9"
features=["for-actix"]